<?xml version="1.0" encoding="utf-8"?>
<resources>



<string name="app_name">Restaurants</string>
<string name="menu_settings">Settings</string>
<string name="button">Add Restaurant</string>
<string name="bname">Get Restaurant:</string>
<string name="uname">Update Restaurant</string>
<string name="aname">Get All Restaurants</string>
<string name="dname">Del Restaurant:</string>
<string name="number">1</string>
<string name="title">Restaurant</string>
<string name="name">Name</string>
<string name="type">Type</string>
    <string name="location">Location</string>
<string name="fname">Find Name</string>


    </resources>