<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DBActivity" >

    <EditText
        android:id="@+id/editTextDelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextGetID"
        android:layout_alignTop="@+id/button2"
        android:ems="10"
        android:inputType="number"
        android:text="@string/number" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_toRightOf="@+id/button3"
        android:ems="10"
        android:inputType="textCapWords" >

        <requestFocus />
        </EditText>

    <EditText
        android:id="@+id/editTextType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextName"
        android:layout_below="@+id/editTextName"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextType"
        android:layout_below="@+id/editTextType"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextType"
        android:layout_alignBottom="@+id/editTextType"
        android:layout_alignRight="@+id/button3"
        android:text="@string/type" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextLoc"
        android:layout_alignBottom="@+id/editTextLoc"
        android:layout_alignRight="@+id/textView2"
        android:text="@string/location" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextName"
        android:layout_toLeftOf="@+id/editTextName"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editTextUpdateID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignLeft="@+id/editTextGetID"
        android:ems="10"
        android:inputType="number"
        android:text="@string/number" />

    <EditText
        android:id="@+id/editTextGetID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_toRightOf="@+id/button4"
        android:ems="10"
        android:inputType="number"
        android:text="@string/number" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/editTextLoc"
        android:onClick="updateName"
        android:text="@string/uname" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="14dp"
        android:onClick="getAllNames"
        android:text="@string/aname" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="addName"
        android:text="@string/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:onClick="deleteName"
        android:text="@string/dname" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextDelID"
        android:layout_alignRight="@+id/button5"
        android:onClick="getName"
        android:text="@string/bname" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignRight="@+id/button4"
        android:onClick="findName"
        android:text="@string/fname" />

    <EditText
        android:id="@+id/editTextFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button6"
        android:layout_toRightOf="@+id/button6"
        android:ems="10"
        android:inputType="textCapWords" />

</RelativeLayout>